<!DOCTYPE resources [
<!ENTITY app_name "HealthyWear">
<!ENTITY scan_button "SCAN">
<!ENTITY fav_button "FAV">
]>
<resources>
    <string name="app_name">&app_name;</string>
    <string name="tab_text_1">SmartBand</string>
    <string name="tab_text_2">MMR</string>
    <string name="tab_text_3">Others</string>
    <string name="scan_button">&scan_button;</string>
    <string name="fav_button">&fav_button;</string>
    <string name="main_title">Healthy Wear</string>
    <string name="app_version">&app_name; App version </string>
    <string name="app_description">The &app_name; app lets the user connect his smartphone with multiple wearable devices. The app will periodically send data to a MongoDB identified by the Mac address of the phone.
        <br/>It works as follows:</string>
    <string name="scan_button_description"><b><i>&scan_button; button</i></b>: pressing this button brings you to a new screen where you will be able to look for the available wearable devices near you.</string>
    <string name="fav_button_description"><b><i>&fav_button; button</i></b>: pressing this button brings you to a new screen where you will be able to check your favourite wearable devices.</string>
    <string name="app_information">Warning: The user has to give Bluetooth and Location privileges to the app. This settings shall be activated for a proper function of the app.</string>
    <string name="ib_close_description">CloseButton</string>
    <string name="available_mmr_devices">Available MMR Devices</string>
    <string name="available_smartband_devices">Available SmartBands</string>
    <string name="menu_back_to_scan">Back to Scan</string>
    <string name="menu_disconnect">Disconnect device</string>
    <string name="menu_info">Info</string>
    <string name="choose_device">Which device would you like to connect?</string>
    <string name="smartband">SmartBand</string>
    <string name="mmrdevice">MMR Devices</string>
    <string name="others">Other Devices</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="temperature">Temperature (\u2103):&#160;&#160;</string>
    <string name="illuminance">Illuminance (Lux):&#160;&#160;</string>
    <string name="altitude">Altitude (m):&#160;&#160;&#160;</string>
    <string name="arm_angle">Arm Angle (\u00B0):&#160;&#160;&#160;</string>
    <string name="acceleration">Acceleration (x,y,z):&#160;&#160;&#160;</string>
    <string name="acceleration_init">{x:0, y:0, z:0}</string>
    <string name="location">Location (Lat, Lng):&#160;&#160;&#160;</string>
    <string name="data_from">Data from:&#160;&#160;&#160;</string>
    <string name="ellipsis">...</string>
    <string name="triple_0">000</string>



    <string name="activity_main_imageView_description">HealthyWear App version </string>
    <string name="connect_button">Connect</string>

    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>
    <string name="message_wait">Please wait</string>
    <string name="action_disconnect">Disconnect</string>
</resources>
