<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_main_infoFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:scaleType="center"
        app:backgroundTint="@color/colorAccent"
        app:backgroundTintMode="src_in"
        app:maxImageSize="50dp"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        app:rippleColor="@color/colorAccent"
        />

    <ImageView
        android:id="@+id/activity_main_imageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:visibility="visible"
        android:adjustViewBounds="true"
        android:contentDescription="@string/activity_main_imageView_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="330dp">

        <TextView
            android:id="@+id/activity_main_titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/activity_main_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/activity_main_buttons"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/scan_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="onClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/activity_main_fav_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/activity_main_buttons"
            android:drawableEnd="@android:drawable/btn_star_big_on"
            android:paddingStart="25dp"
            android:paddingEnd="10dp"
            android:text="@string/fav_button"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/activity_main_versionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_version"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>